--- a/restaurant.html
+++ b/restaurant.html
@@ -106,6 +106,10 @@
                     <div class="content">
                         <h1 class="title">Al Fresco</h1>
                         <p class="para">An Open-Air Garden Cafe Serving Local Speciality With Refreshments. 
+                            Indulge your taste with our multi-cuisine Al Fresco Restaurant with in-room dining facilities.
+                             Made by our experienced and expert staff, we are sure that you will run of appetite but will 
+                             never be satisfied. And add to the delicious food our intimate restaurant setting – and that
+                              will make your culinary treat a memorable one.
                         </p>
                         <!-- <a href="rooms.html"  class="room-button">Book now</a> -->
                 </div>  
