--- a/rooms.html
+++ b/rooms.html
@@ -93,7 +93,7 @@
 
 <div class="room-container">
 
-  <!-- *******************  Section 1 start  ********************* -->
+  <!-- *******************  Standard room start  ********************* -->
 
   <section class="room-section">
     <div class="section-flex">
@@ -135,10 +135,10 @@
 
         <div class="section-right">
             <div class="carousel-content">
-                <h6 class="carousel-title">Suite Room</h6>
-                <p class="carousel-para">Our Couple Rooms by the Pool are ideal for the travellers who wish to spend some 
-                    quality time with their beloved partner in the centre of nature. And it’s alongside the pool which makes it perfect for a romantic stay.
-                     Our rooms are equipped with the best of amenities</p>
+                <h6 class="carousel-title">Standard Room</h6>
+                <p class="carousel-para">Our Standard Rooms are ideal for individuals who wish to spend some 
+                    quality time with their loved ones and experience spirituality at the same time.
+                     Since our hotel is just a few hours away from the famous Sai Temple of Shirdi.</p>
 
                  <a href="contact.html"class="room-button">Book Now</a>
                  
@@ -154,7 +154,7 @@
         </div>
     </div>
 </section>
-<!-- ******************* Luxury start  ********************* -->
+<!-- ******************* Deluxe room start  ********************* -->
 
 
 
@@ -162,10 +162,10 @@
     <div class="section-flex">
         <div class="section-left">
             <div class="carousel-content">
-              <h6 class="carousel-title">Family Room</h6>
-              <p class="carousel-para">Our Luxury Cottage Pool View Rooms are ideal for all type of travellers who wish to 
-                  spend some quality time with their loved ones in the centre of nature with amazing poolside view and
-                  our rooms are equipped with the best of amenities.</p>
+              <h6 class="carousel-title">Deluxe Room</h6>
+              <p class="carousel-para">Our Deluxe Rooms are ideal for group travellers and family vacationers who 
+                  wish to spend some quality time with their loved ones and experience spirituality at the same time.
+                   Since our hotel is just a few hours away from the famous Sai Temple of Shirdi.</p>
 
                   <a href="contact.html"class="room-button">Book Now</a>
 
@@ -221,8 +221,7 @@
 </section>
 
 
-<!-- *****************************  Gardern start   ****************************************** -->
-
+<!-- *****************************  Deluxe suite start   ****************************************** -->
 
 
 <section class="room-section">
@@ -265,10 +264,10 @@
 
         <div class="section-right">
             <div class="carousel-content">
-                <h6 class="carousel-title">Deluxe Room</h6>
-                <p class="carousel-para">Our Luxury Cottage Garden View Rooms are ideal for all type of travellers 
-                    who wish to spend some quality time with their loved ones in the centre of nature with
-                     amazing Garden View and our rooms are equipped with the best of amenities.</p>
+                <h6 class="carousel-title">Deluxe Suite Room</h6>
+                <p class="carousel-para"> Our Deluxe Rooms are ideal for group travellers and family vacationers who
+                     wish to spend some quality time with their loved ones and experience spirituality at the same time.
+                     Since our hotel is just a few hours away from the famous Sai Temple of Shirdi.</p>
 
                      <a href="contact.html"class="room-button">Book Now</a>
 
